[package]
name = "axum_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
bs58 = "0.5.1"
base64 = "0.21"                       
solana-program = "2.3.0"
solana-sdk = "2.3.0"
spl-token = "4.0.0"
ed25519-dalek = "=1.0.1"
anyhow = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
